<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".EventDetailsActivity">

    <include layout="@layout/uploading_image_overlay" />

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/primaryColor"
            app:expandedTitleGravity="bottom|center_horizontal"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            tools:context=".EventDetailsActivity">

            <ImageView
                android:id="@+id/eventImgView"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:onClick="onClick"
                android:scaleType="fitXY" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
                app:layout_collapseMode="pin" />

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:id="@+id/editNameLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/lblName"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:text="@string/lblName"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/txtEventName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:ems="10"
                    android:enabled="false" />

                <TextView
                    android:id="@+id/lblNameErr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/txtErrEventName"
                    android:textColor="@android:color/holo_red_dark"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/lblLocation"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:text="@string/lblLocation"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/txtLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:ems="10"
                    android:enabled="false"
                    android:focusable="false"
                    android:onClick="onClick" />

                <TextView
                    android:id="@+id/lblLocationErr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/txtErrLocation"
                    android:textColor="@android:color/holo_red_dark"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/lblDate"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:text="@string/lblDate"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/txtDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:ems="10"
                    android:enabled="false" />

                <TextView
                    android:id="@+id/lblDateErr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/txtErrDate"
                    android:textColor="@android:color/holo_red_dark"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/lblTime"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:text="@string/lblTime"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/txtTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:ems="10"
                    android:enabled="false" />

                <TextView
                    android:id="@+id/lblTimeErr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/txtErrTime"
                    android:textColor="@android:color/holo_red_dark"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/lblDescription"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:text="@string/lblDescription"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/txtDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:ems="10"
                    android:enabled="false" />

                <TextView
                    android:id="@+id/lblDescriptionErr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/txtErrDescription"
                    android:textColor="@android:color/holo_red_dark"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/lblOrganizedBy"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:text="@string/lblOrganizedBy"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/txtOrganizedBy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:ems="10"
                    android:enabled="false" />

                <TextView
                    android:id="@+id/lblContact"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:text="@string/lblContact"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/txtContact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:ems="10"
                    android:enabled="false" />
            </LinearLayout>

            <Button
                android:id="@+id/btnOne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@color/primaryColor"
                android:onClick="onClick"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btnTwo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@color/primaryColor"
                android:onClick="onClick"
                android:textSize="18sp" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>
